syntax = "proto3";

package vertis.proto.converter;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "broker/broker_options.proto";

option java_package = "vertis.proto.converter";
option java_multiple_files = true;

enum Enum {
    UNKNOWN = 0;
    BAR = 1;
    BAZ = 2;
}

message SimpleMessage {
    int32 num = 1;
    string str = 2;
    bool bool = 3;
}

message WithMessage {
    int32 num = 1;
    string str = 2;
    bool bool = 3;
    SimpleMessage foo = 4;
}

message WithEnum {
     int32 num = 1;
     Enum enum = 2;
}

message WithEnumInProto {
    string str = 1;
    WithEnum with_enum = 2;
}

message WithTimestamp {
    string str = 1;
    google.protobuf.Timestamp ts = 2;
}

message WithWrapped {
    string str = 1;
    google.protobuf.UInt32Value num = 2;
}

message WithAllWrapped {
    google.protobuf.UInt32Value uint32 = 1;
    google.protobuf.UInt64Value uint64 = 2;
    google.protobuf.Int32Value int32 = 3;
    google.protobuf.Int64Value int64 = 4;
    google.protobuf.StringValue string = 5;
    google.protobuf.BoolValue bool = 6;
    google.protobuf.DoubleValue double = 7;
    google.protobuf.FloatValue float = 8;
    google.protobuf.BytesValue bytes = 9;
}

message WithOneOf {
    int32 num = 1;

    oneof referrer {
        string web_referrer = 2;
        string mobile_referrer = 3;
    }
}

message WithOneOfOtherType {
    int32 num = 1;

    oneof referrer {
        string web_referrer = 2;
        int64 mobile_referrer = 3;
    }
}

message WithOneOfMessage {
    int32 num = 1;

    oneof message {
        SimpleMessage simple = 2;
        WithTimestamp with_timestamp = 3;
    }
}

message WithRepeatedPrimitive {
    int32 num = 1;
    repeated uint32 list_of_int = 2;
}

message WithRepeatedWrappedPrimitive {
    int32 num = 1;
    repeated google.protobuf.UInt32Value list_of_wrapped_int = 2;
}

message WithRepeatedMessage {
    int32 num = 1;
    repeated SimpleMessage list_of_msg = 2;
}

message WithRepeatedEnumMessage {
    int32 num = 1;
    repeated WithEnumInProto list_of_msg = 2;
}

message WithRepeatedEnum {
    int32 num = 1;
    repeated Enum list_of_enum = 2;
}

message WithMap {
    uint64 id = 1;
    map<string, string> map_of_string = 2;
}

message WithMapOfEnum {
    uint64 id = 1;
    map<uint64, Enum> map_of_enum = 2;
}

message WithMapOfEnumMessage {
    uint64 id = 1;
    map<uint64, WithEnum> map_of_enum = 2;
}

message WithMapOfWrapped {
    uint64 id = 1;
    map<uint64, google.protobuf.UInt32Value> map_of_wrapped_int = 2;
}

message WithMapOfMessage {
    uint64 id = 1;
    map<string, SimpleMessage> map_of_foo = 11;
}

message TypesMessage {
    string string = 1;
    int32 int32 = 2;
    int64 int64 = 3;
    uint32 uint32 = 4;
    uint64 uint64 = 5;
    bool bool = 6;
    float float = 7;
    double double = 8;
    sfixed32 sfixed32 = 9;
    sfixed64 sfixed64 = 10;
    sint32 sint32 = 11;
    sint64 sint64 = 12;
    fixed32 fixed32 = 13;
    fixed64 fixed64 = 14;
    SimpleMessage foo = 15;
}

message PrimitiveTypesMessage {
    string string = 1;
    int32 int32 = 2;
    int64 int64 = 3;
    uint32 uint32 = 4;
    uint64 uint64 = 5;
    bool bool = 6;
    float float = 7;
    double double = 8;
    sfixed32 sfixed32 = 9;
    sfixed64 sfixed64 = 10;
    sint32 sint32 = 11;
    sint64 sint64 = 12;
    fixed32 fixed32 = 13;
    fixed64 fixed64 = 14;
}

message TestMessage {

    Enum enum = 2;
    repeated Enum list_of_enum = 3;
    map<uint64, Enum> map_of_enum = 4;

    google.protobuf.UInt32Value wrapped_int = 6;
    repeated google.protobuf.UInt32Value list_of_wrapped_int = 7;
    map<uint64, google.protobuf.UInt32Value> map_of_wrapped_int = 8;

    SimpleMessage foo = 9;
    repeated SimpleMessage list_of_foo = 10;
    map<string, SimpleMessage> map_of_foo = 11;

    string string = 12;
    repeated string list_of_string = 13;
    map<string, string> map_of_string = 14;

    google.protobuf.Timestamp timestamp = 15;
    repeated google.protobuf.Timestamp list_of_timestamp = 16;
    map<bool, google.protobuf.Timestamp> map_of_timestamp = 17;

    int32 int = 18;
    repeated int32 list_of_int = 19;
    map<sfixed64, int32> map_of_int = 20;
}

message SimpleTableMessage {
    google.protobuf.Timestamp timestamp = 1;
    string key = 2;
}

message NotAlwaysAllowRecursion {
    InnerRecursion allow = 1[(.broker.allow_recursion) = true];
    InnerRecursion not_allow = 2;

    message InnerRecursion {
        WithRecursion hello = 1;
    }
}

message WithRecursion {
    WithRecursion hello = 1;
}

message BytesMessage {
    bytes b = 1;
    google.protobuf.BytesValue wb = 2;
    repeated bytes rb = 3;
    repeated google.protobuf.BytesValue rwb = 4;
}